# cla

./: .gitignore  Cargo.toml  IMPLEMENTATION_STATUS.md  README.md  SETUP.md  clippy.toml
.cursor/rules/: specify-rules.mdc
.githooks/: commit-msg  pre-commit  pre-push
.specify/memory/: constitution.md
benches/: cla_benchmark.rs
docs/: RECOMMENDATIONS.md
examples/: README.md  basic_usage.rs  minvar.rs  plot_frontier.rs  unconstrained.rs
scripts/: install-git-hooks.sh
specs/001-cvxcla-migration/: ANALYSIS_REPORT.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-cvxcla-migration/checklists/: requirements.md
specs/001-cvxcla-migration/contracts/: api.md
src/: cla.rs  error.rs  first.rs  lib.rs  optimize.rs  types.rs
tests/: README.md  integration_accuracy_test.rs  integration_cla_test.rs  integration_edge_cases_test.rs  integration_first_test.rs  integration_optimize_test.rs  integration_performance_test.rs  integration_types_test.rs  property_mathematical_properties_test.rs  unit_cla_test.rs  unit_first_test.rs  unit_optimize_test.rs  unit_types_test.rs
tests/common/: mod.rs  python_parity.rs  test_data.rs
tests/integration/: first_test.rs
tests/unit/: first_test.rs  optimize_test.rs  types_test.rs
